--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- https://cdn.hashnode.com/res/hashnode/image/upload/v1621161793435/dzUidAz1a.jpeg?w=500&h=500&fit=crop&crop=entropy&auto=compress -->
+
 
 <!DOCTYPE html>
 <html>
@@ -8,11 +8,11 @@
 	<title>Personal Website</title>
 </head>
 <body>
-	<!--<img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1621161793435/dzUidAz1a.jpeg" alt="Paritosh Profile Picture"> -->
+	
 	<table cellspacing="20">
 		<tr>
 			<td>
-				<img src="images/paritosh.jpg" alt="Paritosh Profile Picture" width="200">
+				<img src="paritosh.jpg" alt="Paritosh Profile Picture" width="200">
 			</td>
 			<td>
 				<h1>The Paritosh Kumar</h1>
