Updated pages with CSS stylesheet

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Me</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h2>My Contacts</h2>
+	<h1>My Contacts</h1>
 	<p><strong>Fictional Address:</strong> ABC123, Dreamland,India</p>
 	<p><a href="https://www.instagram.com/theparitoshkumar/">Instagram</a></p>
 	<p><a href="https://www.linkedin.com/in/theparitoshkumar/">LinkedIn</a></p>
