--- a/hobbies.html
+++ b/hobbies.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Hobbies</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h3>Hobbies</h3>
+	<h1>Hobbies</h1>
 	<ol>
 		<li>Programming</li>
 		<li>Problem Solving</li>
